--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,23 @@
 body {
     margin: 0px;
     padding: 0px;
+    background-color: white;
 }
 
-#background {
-    background-image: url("pictures/big_jay_background.jpeg");
+h1 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 40pt;
+    text-align: center;
 }
 
-#punkin {
-    background-image: url("pictures/background.jpeg");
+#big-jay {
+    display: block;
+    margin: auto;
+    width: 20%
 }
 
 #banner {
-    background-color:#1478fb;
+    background-color:#dde5ed;
     width: 100%;
     height: 100px;
     margin: 0px;
@@ -24,21 +29,26 @@ body {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 25%;
+    width: 20%;
     height: 100px;
     text-align: center;
 }
 
 #banner li:hover {
-    background-color: #FB5A62;
+    background-color: #85898a;
     cursor: pointer;
 }
 
 #banner li a {
     display: block;
-    color:white;
+    color:#0051ba;
     text-align: center;
     padding: 20px 14px;
     text-decoration: none;
-    font-size:4ch;
+    font-size:30pt;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+#punkin {
+    background-image: url("pictures/background.jpeg");
 }
